TagsInput: fix ip-switch horizontal jump

--- a/src/assets/less/components/tags-input.less
+++ b/src/assets/less/components/tags-input.less
@@ -249,7 +249,7 @@
 			border-radius: 8px;
 			outline: none;
 			width: calc(100% - 2px);
-			margin: 3px 0 -1px;
+			margin: 3px 0 -1px -.5px;
 
 			@media (min-width: @screen-sm-min) {
 				margin: 0 0 0 3px;
